Remove border around completed melds, fix some layout issues

--- a/src/components/Melds.css
+++ b/src/components/Melds.css
@@ -1,34 +1,30 @@
 .melds-container-row,
-.melds-container-row .meld-container {
+.meld-container-row {
 	display: flex;
 	flex-direction: row;
 	align-self: flex-start;
 }
 
 .melds-container-column,
-.melds-container-column .meld-container {
+.meld-container-column {
 	display: flex;
 	flex-direction: column;
 }
 
-.meld-container {
-	display: flex;
-	border: 0.5px solid black;
-	border-radius: 7.5px;
-	padding: 5px;
+.meld-container-row {
 	margin: 0px 5px;
 }
 
-.meld-tile-container {
-	box-shadow: 2px 2px 2px 2px rgba(191, 191, 191, 1);
-	border: 0.5px solid grey;
-	border-radius: 5px;
-	margin: 5px;
-	background-color: rgba(255, 249, 242, 0.5);
+.meld-container-column {
+	margin: 5px 0px;
 }
 
-.meld-tile-container-row {
-	display: block;
+.meld-tile-container {
+	background-color: rgba(255, 249, 242, 0.5);
+	border: 0.5px solid grey;
+	border-radius: 5px;
+	box-shadow: 2px 2px 2px 2px rgba(191, 191, 191, 1);
+	margin: 5px;
 }
 
 .meld-tile-container-180 {
